# DSA

./: .gitignore  AGENTS.md  README.md  curriculum.json  progress.json  pyproject.toml  sysd-curriculum.json  sysd-progress.json
.claude/agents/: illustrator.md  quiz-builder.md
dsa_buddy/: __init__.py  cli.py  curriculum_data.py  plan.py  progress.py  quiz.py  topic.py
quizzes/arrays-and-hashing/: conceptual_quiz_contains_duplicate.md  conceptual_quiz_group_anagrams.md  conceptual_quiz_two_sum.md  conceptual_quiz_valid_anagram.md  test_contains_duplicate.py  test_group_anagrams.py  test_top_k_frequent_elements.py  test_two_sum.py  test_valid_anagram.py
quizzes/backtracking/: test_array_equal_partition.py
quizzes/two-pointers/: test_string_replacement.py
sysd-quizzes/async-messaging/: conceptual_quiz_backpressure.md  conceptual_quiz_event_driven_architecture.md  conceptual_quiz_idempotency.md  conceptual_quiz_kafka_basics.md  conceptual_quiz_message_queues.md  conceptual_quiz_pub_sub.md
sysd-quizzes/caching-cdn/: conceptual_quiz_cache_eviction.md  conceptual_quiz_cache_invalidation.md  conceptual_quiz_cache_strategies.md  conceptual_quiz_cdn.md
sysd-quizzes/classic-designs/: conceptual_quiz_design_chat_system.md  conceptual_quiz_design_kv_store.md  conceptual_quiz_design_notification_system.md  (+6 more)
sysd_buddy/: cli.py  curriculum_data.py  plan.py  progress.py  quiz.py  topic.py
tests/: test_integration.py  test_plan.py  test_progress.py  test_quiz.py  test_sysd_plan.py  test_sysd_progress.py  test_sysd_quiz.py  test_sysd_topic.py  test_topic.py
(+440 files in other folders)
