[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-buddy"
version = "0.1.0"
description = "DSA learning companion CLI aligned with NeetCode.io"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["dsa_buddy*", "sysd_buddy*"]

[project.scripts]
dsa-buddy = "dsa_buddy.cli:cli"
sysd-buddy = "sysd_buddy.cli:cli"
